--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-kubernetes</artifactId>
+      <version>0.2.0.RELEASE</version>
+    </dependency>
+
   </dependencies>
   
   <dependencyManagement>
