--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,17 @@
       <version>0.2.0.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-kubernetes-config</artifactId>
+      <version>0.2.0.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-kubernetes-ribbon</artifactId>
+      <version>0.2.0.RELEASE</version>
+    </dependency>
+
   </dependencies>
   
   <dependencyManagement>
