--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.netflix.netflix-commons</groupId>
+      <artifactId>netflix-commons-util</artifactId>
+      <version>0.1.1</version>
+    </dependency>
     
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -55,6 +61,11 @@
       <artifactId>spring-cloud-kubernetes-ribbon</artifactId>
       <version>0.2.0.RELEASE</version>
     </dependency>
+      <dependency>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-commons</artifactId>
+          <version>1.13.6.RELEASE</version>
+      </dependency>
 
   </dependencies>
   
