--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
     </dependency>
 
     <dependency>
+      <groupId>net.logstash.logback</groupId>
+      <artifactId>logstash-logback-encoder</artifactId>
+      <version>4.9</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-kubernetes</artifactId>
       <version>0.2.0.RELEASE</version>
@@ -99,13 +105,13 @@
         <scope>import</scope>
       </dependency>
 
-      <dependency>
+      <!-- <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-sleuth</artifactId>
         <version>1.3.0.RELEASE</version>
         <type>pom</type>
         <scope>import</scope>
-      </dependency>
+      </dependency> -->
 
     </dependencies>
   </dependencyManagement>
