--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.4.7.RELEASE</version>
+    <version>1.5.8.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -100,19 +100,10 @@
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>Brixton.SR5</version>
+        <version>Dalston.RELEASE</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-
-      <!-- <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-sleuth</artifactId>
-        <version>1.3.0.RELEASE</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency> -->
-
     </dependencies>
   </dependencyManagement>
   
