--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <version>1.4.195</version>
-      <scope>test</scope>
+      <scope>test,runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
