--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.sentry</groupId>
+      <artifactId>sentry-spring</artifactId>
+      <version>1.6.7</version>
+    </dependency>
 
   </dependencies>
   
