--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
       <version>0.2.0.RELEASE</version>
     </dependency>
 
-    <!-- <dependency>
+    <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-kubernetes-config</artifactId>
       <version>0.2.0.RELEASE</version>
@@ -87,7 +87,7 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-kubernetes-ribbon</artifactId>
       <version>0.2.0.RELEASE</version>
-    </dependency> -->
+    </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
