--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
+    <jackson.version>2.8.9</jackson.version>
   </properties>
 
   <dependencies>
@@ -103,6 +104,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <version>1.18.6</version>
     </dependency>
     <dependency>
       <groupId>io.sentry</groupId>
