--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <exclusion>
           <groupId>org.codehaus.groovy</groupId>
           <artifactId>
-            groovy
+            groovy-all
           </artifactId>
         </exclusion>
       </exclusions>
@@ -75,7 +75,7 @@
 
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy</artifactId>
+      <artifactId>groovy-all </artifactId>
       <version>2.5.8</version>
     </dependency>
 
