--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-kubernetes-ribbon</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-properties-migrator</artifactId>
+      <scope>runtime</scope>
+    </dependency>
 
     <dependency>
       <groupId>com.h2database</groupId>
