replace tokens on test config

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -59,6 +59,8 @@ member-service:
     eureka:
       enabled: false
     listOfServers: localhost:4084
-  token: ""
-payment-service:
-  token: ""
+
+hedvig:
+  service:
+    tokens[0]: memberToken
+    tokens[1]: paymentToken
