--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,13 @@
       </exclusions>
     </dependency>
     <!--- GraphQl Dependencies -->
+
+    <dependency>
+      <groupId>com.ninja-squad</groupId>
+      <artifactId>springmockk</artifactId>
+      <version>1.1.3</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
