--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>com.graphql-java-kickstart</groupId>
+      <artifactId>graphql-spring-boot-starter-test</artifactId>
+      <version>5.11.1</version>
+      <scope>test</scope>
+    </dependency>
     <!--- GraphQl Dependencies -->
 
     <dependency>
