--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,12 @@
       <version>1.1.3</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.neovisionaries</groupId>
+      <artifactId>nv-i18n</artifactId>
+      <version>1.27</version>
+    </dependency>
   </dependencies>
 
   <build>
